@@ -261,7 +261,7 @@ assign-disk-from:			unconformable
 vsam-status:				unconformable
 self-call-recursive:		skip
 record-contains-depending-clause:	unconformable
-defaultbyte: ignore
+defaultbyte:		none	# "undefined"
 
 # archaic in COBOL2002 and currently not available as dialect features:
 # 1: MOVE of alphanumeric figurative constants to numeric items
