@@ -264,7 +264,7 @@ assign-disk-from:			ok
 vsam-status:				ignore
 self-call-recursive:		skip
 record-contains-depending-clause:	unconformable
-defaultbyte:		32
+defaultbyte:		" "
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		MF
