@@ -265,7 +265,7 @@ assign-disk-from:			unconformable
 vsam-status:				ok
 self-call-recursive:		skip
 record-contains-depending-clause:	unconformable
-defaultbyte:		ignore # not verified yet, possibly like ACU/MF
+defaultbyte:		" "	# not verified, but possibly like ACU/MF
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		realia
